@@ -1,5 +1,6 @@
 #define PCI_ARCH_I386
 #define PCI_OS_WINDOWS
 #define PCI_HAVE_PM_INTEL_CONF
-#define PCI_PATH_IDS "pci.ids"
+#define PCI_IDS "pci.ids"
+#define PCI_PATH_IDS_DIR "."
 #define PCILIB_VERSION "@VERSION@"
